add bootstrap css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <link href="css/bootstrap.css" rel="stylesheet" text="text/css">
-    <title>Transylvania Vacation</title>
-</head>
-<body>
-    
-</body>
+    <title>Icelandic Vacation</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Icelandic Vacation</h1>
+        <p>
+          Homeland of Bjork!
+        </p>
+      </div>
+      <h2 class=bg-info>What our visitors say:</h2>
+      <blockquote>
+        <p>"It's not always that cold"</p>
+        <footer>Random white tourist</footer>
+      </blockquote>
+    </div>
+  </body>
 </html>
