--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
           Homeland of Bjork!
         </p>
       </div>
-      <h2 class=bg-info>What our visitors say:</h2>
+      <div class="panel panel-success">
+        <div class="panel-heading">
+         <h1 class="panel-title">About Iceland</h1>
+        </div>
+        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ullam ab debitis quibusdam beatae eos, in cumque minus provident quia, similique obcaecati hic tenetur nam molestiae sit dolorem aliquid recusandae.
+        </p>
+      </div>
+      <div class="well">
+        <h3>More about Iceland:</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aperiam incidunt ullam perferendis soluta, inventore corrupti quibusdam accusantium nihil facere architecto repellendus. Consectetur repellat ipsa commodi necessitatibus, ea similique repellendus?</p>
+      </div>
+      <h3 class=bg-info>What our visitors say:</h3>
       <blockquote>
         <p>"It's not always that cold"</p>
         <footer>Random white tourist</footer>
+        <p class="bg-danger">"It is def cold af."</p>
+        <footer>Everyone else.</footer>
       </blockquote>
     </div>
   </body>
