Add rows and columns.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" text="text/css">
+    <link rel="stylesheet" href="css/styles.css" text="text/css">
     <title>Icelandic Vacation</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
         <h1>Icelandic Vacation</h1>
-        <p>
+        <h4>
           Homeland of Bjork!
-        </p>
+        </h4>
       </div>
       <div class="panel panel-success">
         <div class="panel-heading">
-         <h1 class="panel-title">About Iceland</h1>
+         <h3 class="panel-title">About Iceland</h3>
         </div>
         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ullam ab debitis quibusdam beatae eos, in cumque minus provident quia, similique obcaecati hic tenetur nam molestiae sit dolorem aliquid recusandae.
         </p>
@@ -30,6 +31,42 @@
         <p class="bg-danger">"It is def cold af."</p>
         <footer>Everyone else.</footer>
       </blockquote>
+      <div class="row">
+        <h2>Travel packages</h2>
+        <div class="col-md-4">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <h2 class="panel-title">Package 1</h2>
+            </div>  
+            <div class="panel-body">
+              <p>Lorem ipsum dolor sit amet cßonsectetur adipisicing elit. Tempora fugiat autem tempore cumque in accusamus, dignissimos non odio tenetur, commodi repudiandae aliquid ratione, eos minima voluptate quisquam! Labore, sit aperiam.</p>
+             </div>
+           </div>   
+          </div>
+          <div class="col-md-4"> 
+           <div class="panel panel-warning">
+              <div class="panel-heading">
+                <h2 class="panel-title">Package 2</h2>
+              </div>  
+              <div class="panel-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora fugiat autem tempore cumque in accusamus, dignissimos non odio tenetur, commodi repudiandae aliquid ratione, eos minima voluptate quisquam! Labore, sit aperiam.</p>
+               </div>
+             </div>   
+            </div>
+             <div class="col-md-4">
+             <div class="panel panel-danger">
+                <div class="panel-heading">
+                  <h2 class="panel-title">Package 3</h2>
+                </div>  
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora fugiat autem tempore cumque in accusamus, dignissimos non odio tenetur, commodi repudiandae aliquid ratione, eos minima voluptate quisquam! Labore, sit aperiam.</p>
+                 </div>
+               </div>   
+
+
+        </div>
+
+      </div>
     </div>
   </body>
 </html>
